<resources>
    <string name="app_name">Diplomen Proekt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR CONNECT WITH</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>

    <string name="facebook_app_id">526498191468722</string>
    <string name="fb_login_protocol_scheme">fb526498191468722</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>