<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/control_page_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device Name"
                android:textSize="25dp"></TextView>

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/edit_button_foreground"></ImageButton>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/blue_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/device_power_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="#A500FF"
                android:background="@mipmap/power_button_foreground"
                ></ImageButton>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_data"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/data_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="18sp" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/topRow"
        tools:layout_editor_absoluteX="0dp">

        <SeekBar
            android:id="@+id/brightness_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"

            android:progress="100"
            android:max="100"
            android:layout_marginBottom="10dp"
            android:indeterminate="false" />

        <com.rtugeek.android.colorseekbar.ColorSeekBar
            android:id="@+id/color_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:colorSeekBarBarHeight="5dp"
            app:colorSeekBarColorSeeds="@array/color_picker_slider_colors"
            app:colorSeekBarRadius="100dp"
            app:colorSeekBarShowThumb="true"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="140dp" />

        <GridView
            android:id="@+id/color_preset_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="5">
        </GridView>

<!--        <ImageView-->
<!--            android:id="@+id/red_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/red"-->
<!--            android:background="@drawable/color_preset" />-->

<!--        <ImageView-->
<!--            android:id="@+id/orange_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/orange"-->
<!--            android:background="@drawable/color_preset" />-->

<!--        <ImageView-->
<!--            android:id="@+id/yellow_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/yellow"-->
<!--            android:background="@drawable/color_preset" />-->

<!--        <ImageView-->
<!--            android:id="@+id/green_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/green"-->
<!--            android:background="@drawable/color_preset" />-->

<!--        <ImageView-->
<!--            android:id="@+id/blue_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/blue"-->
<!--            android:background="@drawable/color_preset" />-->

<!--        <ImageView-->
<!--            android:id="@+id/purple_preset_button"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:backgroundTint="@color/purple"-->
<!--            android:background="@drawable/color_preset" />-->

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>